<resources>
    <string name="app_name">Martin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="incorrect">Incorrect Username or Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="e_mail">E-mail</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="validasi">username telah tersedia</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account?</string>
</resources>
