<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/txt_amary"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="19dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_lohinfb"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        android:background="@drawable/img_facebook"/>
    <ImageView
        android:id="@+id/txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:src="@drawable/txt_or"/>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_or"
        android:hint="@string/username"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorWhite"
        android:drawableStart="@drawable/img_username"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:hint="@string/password"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorWhite"
        android:drawableStart="@drawable/img_password"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"/>
    <TextView
        android:id="@+id/tv_fotgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        android:gravity="right"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="240dp"/>
    <TextView
        android:id="@+id/tv_incorrectpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/tv_fotgotpassword"
        android:text="@string/incorrect"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="16dp"/>
    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="385dp"
        android:background="@drawable/btn_signin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tv_createaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_signin"
        android:layout_marginTop="5dp"
        android:text="@string/create_new_account"
        android:textColor="@color/colorWhite"
        android:gravity="center"/>

</RelativeLayout>