<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    tools:context=".SignUp">
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/txt_amary"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="19dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_signupfb"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        android:background="@drawable/img_facebook"/>
    <ImageView
        android:id="@+id/txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:src="@drawable/txt_or"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_or"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">
        <EditText
            android:id="@+id/et_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/img_username"
            android:hint="@string/username"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorWhite"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_signup_username"
            android:drawableStart="@drawable/img_password"
            android:hint="@string/password"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorWhite"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/et_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_signup_password"
            android:drawableStart="@drawable/img_name"
            android:hint="@string/full_name"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorWhite"
            android:inputType="text"/>

        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_signup_name">
            <TextView
                android:id="@+id/tv_jeniskelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jenis Kelamin"
                android:textColor="@color/colorHint"/>
            <RadioButton
                android:id="@+id/rb_laki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Laki - laki"
                android:textColor="@color/colorHint" />
            <RadioButton
                android:id="@+id/rb_perempuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Perempuan"
                android:textColor="@color/colorHint" />

        </RadioGroup>
        <EditText
            android:id="@+id/et_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rb_group"
            android:drawableStart="@drawable/img_email"
            android:hint="@string/e_mail"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorWhite"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/et_signup_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_signup_email"
            android:drawableStart="@drawable/img_phone"
            android:hint="@string/phone_number"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorWhite"
            android:inputType="phone"/>
        <TextView
            android:id="@+id/tv_validationsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_signup_phone"
            android:text="@string/validasi"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:textSize="16sp"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_sigup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:background="@drawable/btn_createaccount_1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sigup"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"/>

</RelativeLayout>